--- a/pros-and-cons-of-smart-irrigation.html
+++ b/pros-and-cons-of-smart-irrigation.html
@@ -51,7 +51,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="description" content="Pros and cons of smart irrigation. Apple HomeKit and Google Home compatible smart home irrigation solutions.">
   
   
-  <title>Smart Irrigation: Pros and Cons</title>
+  <title>Smart Irrigation: Pros and Cons - House-Mate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
