--- a/garage.html
+++ b/garage.html
@@ -53,7 +53,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="description" content="Smart garage door controller using Apple HomeKit or Siri | Always know whether your smart garage is open or closed">
   
   
-  <title>House-mate Garage Door Automation</title>
+  <title>Smart Garage Door - HouseMate Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
