--- a/index050223.html
+++ b/index050223.html
@@ -426,9 +426,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
 
-            <div class="mbr-figure m-auto" style="width: 40%;">
+            <div class="mbr-figure m-auto" style="width: 30%;">
                <picture>
-<img src="assets/images/front1-428x428.jpg" alt="House-Mate" title="Apple HomeKit Environment">
+<source type="image/webp" srcset="assets/images/webp/front1-600x289.webp">
+<img src="assets/images/front1-600x289.jpg" alt="House-Mate" title="Apple HomeKit Environment">
 
 </picture>
             </div>
@@ -502,9 +503,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
 
-            <div class="mbr-figure m-auto" style="width: 40%;">
+            <div class="mbr-figure m-auto" style="width: 30%;">
                 <picture>
-<img src="assets/images/front2-428x428.jpg" alt="House-mate" title="Full home control via one voice enabled app!">
+<source type="image/webp" srcset="assets/images/webp/front2-450x462.webp">
+<img src="assets/images/front2-450x462.jpg" alt="House-mate" title="Full home control via one voice enabled app!">
 
 </picture>
             </div>
