--- a/thermostat.html
+++ b/thermostat.html
@@ -284,7 +284,7 @@ The Nest thermostat is popular (due to its sleek appearance at ~$350 unfitted). 
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">WiFi Controllers</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Wifi controllers are used when a smart thermostat isn't required. &nbsp;A number of major brands produce Wifi controllers that can be purchased and installed by heating/cooling specialists. &nbsp;This approach leaves customers with their original wall mounted thermostat and adds the convenience of control via Siri or HomeKit, Google, etc. &nbsp;Depending upon the brand the Wifi controllers can vary in price from $250 up to ~$1100.&nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Wifi controllers are used when a smart thermostat isn't required. &nbsp;A number of major brands produce Wifi controllers that can be purchased and installed by heating/cooling specialists. &nbsp;This leaves customers with their original wall mounted thermostat and adds the convenience of control via Siri or HomeKit.</p>
                     </div>
                 </div>
             </div>
