--- a/testimonials.html
+++ b/testimonials.html
@@ -235,7 +235,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Flinders</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Andrew and his team sought to understand what I wanted and worked seamlessly with my builder and various trades to implement a solution that we are wrapped with. The professionalism was notable from the get go, and when it came to implementation and handover all of my questions were addressed.  We are now looking to Housemate to put automation into our other house." <br>- David H.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">"Andrew and his team sought to understand what I wanted and worked seamlessly with my builder and various trades to implement a solution that we are wrapped with. The professionalism was notable from the get go, and when it came to implementation and handover all of my questions were addressed.  We are now looking to Housemate to put automation into our other house." <br>- David H.</p>
                     </div>
                 </div>
             </div>
@@ -243,14 +243,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="card-wrapper">
                     <div class="card-img">
                         <picture>
-                            <source type="image/webp" srcset="assets/images/webp/large-penin-366x228-366x228.webp">
-                            <img src="assets/images/large-penin-366x228-366x228.png" alt="House-mate" title="Apple HomeKit interface for pool control is very stylish">
+                            <source type="image/webp" srcset="assets/images/webp/malv-366x228.webp">
+                            <img src="assets/images/malv-366x228.png" alt="House-mate" title="Retrofit installation Malvern">
                         </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Malvern</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Life’s Good!!!  A huge thanks to Andrew and House-mate for seamlessly retrofitting my house for home automation.  The benefits are immense, I am saving costs on power as well as being environmentally friendly at the same time.  The convenience of being able to control blinds, heater/air con and bed blankets upstairs is immeasurable.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">"Life’s Good! A huge thanks to Andrew and House-mate for seamlessly retrofitting my house for home automation.  The benefits are immense, I am saving costs on power as well as being environmentally friendly at the same time.  The convenience of being able to control blinds, heater/air con and bed blankets upstairs is immeasurable." <br>- Rochelle</p>
                     </div>
                 </div>
             </div>
