--- a/news.html
+++ b/news.html
@@ -183,7 +183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      <p>There is alot of activity in the smart home space and we are compiling links to very useful articles for customers to read.  </span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">Please come back to this page soon as content will be uploaded shortly...</a></span><br></p>
+                     <p><span style="font-size: 1rem;">Please come back to this page soon as content will be uploaded shortly.</a></span><br></p>
                 </div>
                 
             </div>
