--- a/testimonials.html
+++ b/testimonials.html
@@ -197,7 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-img">
                         <picture>
                             <source type="image/webp" srcset="assets/images/webp/capture-366x228-2-366x228.webp">
-                            <img src="assets/images/capture-366x228-2-366x228.jpg" alt="House-mate" title="Save time and money managing your pool and spa">
+                            <img src="assets/images/capture-366x228-2-366x228.png" alt="House-mate" title="Save time and money managing your pool and spa">
                         </picture>
                     </div>
                     <div class="card-box">
@@ -213,7 +213,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-img">
                         <picture>
                             <source type="image/webp" srcset="assets/images/webp/capture-366x228b-366x228.webp">
-                            <img src="assets/images/capture-366x228b-366x228.png" alt="House-mate" title="Control pool temperature and heating.  Turn on/off pumps">
+                            <img src="assets/images/capture-366x228b-366x228.jpg" alt="House-mate" title="Control pool temperature and heating.  Turn on/off pumps">
                         </picture>
                     </div>
                     <div class="card-box ">
