--- a/keyless-entry.html
+++ b/keyless-entry.html
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-img">
                         
 <picture>
-<source type="image/webp" srcset="assets/images/webp/lock-homekit-view-220x220.webp">
+<source type="image/webp" srcset="assets/images/lock-homekit-view-220x220.jpg">
 <img src="assets/images/lock-homekit-view-220x220.jpg" alt="House-mate" title="Apple HomeKit irrigation interface is simple to use">
 
 </picture>
