--- a/keyless-entry.html
+++ b/keyless-entry.html
@@ -227,7 +227,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
-              <h1 style="font-size:6vw"><b>Smart Irrigation</b></h1> 
+              <h1 style="font-size:6vw"><b>Smart Locks</b></h1> 
                 <p class="mbr-text pb-2 mbr-fonts-style display-4">Control keyless entry using HomeKit™ and Siri™</p>
                 
             </div>
