--- a/keyless-entry.html
+++ b/keyless-entry.html
@@ -303,8 +303,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-img">
                         
 <picture>
-<source type="image/webp" srcset="assets/images/webp/automatic-rain-delay-220x220.webp">
-<img src="assets/images/automatic-rain-delay-220x220.jpg" alt="House-mate" title="Automatic keyless-entry delay when chance of rain is high">
+<source type="image/webp" srcset="assets/images/webp/yale-digital-lock-220x220.webp">
+<img src="assets/images/yale-digital-lock-220x220.jpg" alt="House-mate" title="Seamless keyless entry">
 
 </picture>
                     </div>
