--- a/keyless-entry.html
+++ b/keyless-entry.html
@@ -303,7 +303,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-img">
                         
 <picture>
-<source type="image/webp" srcset="assets/images/webp/yale-digital-lock-220x220.webp">
+<source type="image/webp" srcset="assets/images/yale-digital-lock-220x220.jpg">
 <img src="assets/images/yale-digital-lock-220x220.jpg" alt="House-mate" title="Seamless keyless entry">
 
 </picture>
