--- a/keyless-entry.html
+++ b/keyless-entry.html
@@ -285,8 +285,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-img">
                         
 <picture>
-<source type="image/webp" srcset="assets/images/webp/24v-sprinkler-solenoid-220x220.webp">
-<img src="assets/images/24v-sprinkler-solenoid-220x220.jpg" alt="House-mate" title="24v Sprinkler solenoids (or sprinklers control valves) are compatible">
+<source type="image/webp" srcset="assets/images/smart-lock-homekit-220x220.webp">
+<img src="assets/images/smart-lock-homekit-220x220.jpg" alt="House-mate" title="Many smart lock styles are compatible.">
 
 </picture>
                     </div>
