--- a/keyless-entry.html
+++ b/keyless-entry.html
@@ -285,7 +285,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-img">
                         
 <picture>
-<source type="image/webp" srcset="assets/images/smart-lock-homekit-220x220.webp">
+<source type="image/webp" srcset="assets/images/smart-lock-homekit-220x220.jpg">
 <img src="assets/images/smart-lock-homekit-220x220.jpg" alt="House-mate" title="Many smart lock styles are compatible.">
 
 </picture>
