--- a/keyless-entry.html
+++ b/keyless-entry.html
@@ -245,13 +245,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
                      <p>The smart lock is connected to the Wi-Fi network and enables access control into the premises using HomeKit™ or Siri™.
-</p><p>The best smart lock solutions .</p><p><span style="font-size: 1rem;">Securely operate your door locks from anywhere in the world using the HomeKit™ app or by voice using Siri™.</span></p>
+</p><p>The best smart lock solutions .</p><p><span style="font-size: 1rem;">Securely operate your door locks from anywhere in the world using the HomeKit™ app or by voice using Siri™.  Smart locks have revolutionized the way we secure and access our homes and properties. These innovative devices represent a significant leap forward from traditional lock-and-key systems, bringing the power of technology to our doorsteps.
+
+At their core, smart locks are designed to provide keyless entry, allowing homeowners to control access to their properties in a more convenient and secure manner. By using wireless communication protocols like Bluetooth, Wi-Fi, or Zigbee, smart locks enable users to lock and unlock their doors remotely, often through smartphone apps. Some systems even integrate voice recognition or biometric authentication, enhancing security and ease of use.
+
+The advantages of smart locks are manifold. They offer enhanced security through features like PIN codes and activity monitoring, reducing the risk of unauthorized access. </span></p>
                 </div>
 
 
 
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Smart sprinkler controllers can cut down water usage by up to 50% compared to conventional systems. &nbsp;Only water when and where it’s needed. <span style="font-size: 1rem;">Cycle any watering zone(s) at the touch of a button or via voice command. "Hey Siri, water the front lawn".</span></p><p><span style="font-size: 1rem;">Modernising water management means healthier gardens, lower water &amp; energy consumption. Smart keyless-entry delivers a thriving and lush landscape.<br><br>
+                     <p>Convenience is a key selling point, as smart locks allow homeowners to grant access to guests, family members, or service providers even when they're away from home. Additionally, many smart locks provide detailed activity logs, helping homeowners keep track of who enters and exits their property, enhancing security and peace of mind.
+
+However, smart locks are not without their challenges. Vulnerabilities to hacking, power dependency on batteries, compatibility issues with various devices, and the initial cost of investment are some of the disadvantages that users should consider. Nevertheless, smart locks represent a significant step forward in the evolution of home security and automation, offering a glimpse into the future of how we interact with our living spaces..</span></p><p><span style="font-size: 1rem;">Smart keyless entry delivers a secure yet sophisticated entry and exit solution.<br><br>
 <a href="pros-and-cons-of-smart-locks.html">Article: Advantages and Disadvantages of Smart Locks</a>
 </span></p>
                 </div>
