--- a/pros-and-cons-of-smart-locks.html
+++ b/pros-and-cons-of-smart-locks.html
@@ -238,25 +238,20 @@ The solar power alternative usually comes as a slimline solar panel which includ
                      
 <details>
 		<summary>Advantages of Smart Locks</summary>
-		<b>1. Convenience:</b> Enhanced Security: Smart locks often offer advanced security features, such as keyless entry, biometric authentication, and the ability to monitor access remotely. These features can help deter unauthorized access and provide peace of mind. <br>
-<b>2. Convenience</b>  Smart locks allow users to lock and unlock their doors remotely using a smartphone app, a code, or even voice commands. This convenience is particularly useful for homeowners who frequently need to grant access to guests, family members, or service providers.<br>
-<b>3. Activity Monitoring:</b>  Many smart locks come with activity logs, which record when the door is locked or unlocked. This feature enables homeowners to keep track of who enters and leaves their property, providing valuable information for security and home management.<br> 
-<b>4. Security:</b> Motorized keyless-entrys can be programmed to open and close automatically at a specific time and day, or alternatively be connected to a smart alarm system to close the keyless-entrys automatically when the house is armed. You can give the impression that people are at home by operating lights and keyless-entrys automatically which will discourage intruders from trying to break into your home  open your home. This is called “mockupancy”.<br>
-<b>5. Prolong keyless-entry Life:</b> An erratic or pulling the chord the wrong way too often can damage the slats or strings of your window keyless-entrys. With motorized keyless-entrys, you have precise control with accurate and safe operation, prolonging your keyless-entrys’ service life. <br>
-<b>6. Neat Appearance:</b> The cordless built motorized keyless-entrys not only prevent accidents caused by playful young kids and pets but eliminates the eyesore of drawstrings, leaving you with neat and unobstructed keyless-entrys. <br>
-<b>7. Quiet Operations: </b>Aside from the convenience of operating your window keyless-entrys via your phone or voice, quality models of motorized keyless-entrys operate very quietly. Moreover, the motor systems are concealed while working silently.  
-In addition, the motorized mechanism is not only available for keyless-entrys, but there are also motorized models for curtains, roller keyless-entrys, venetians and other types of window hardware. 
+		<b>1. Enhanced Security:</b> Enhanced Security: Smart locks often offer advanced security features such as PIN codes, biometric authentication, and real-time activity monitoring, reducing the risk of unauthorized access.<br>
+<b>2. Convenience:</b> Keyless entry allows for remote control, enabling homeowners to grant access to guests or service providers even when they're not at home.<br>
+<b>3. Activity Monitoring:</b> Many smart locks maintain detailed activity logs, helping users keep tabs on who enters and exits their property, enhancing security and providing peace of mind.<br> 
+<b>4. Temporary Access:</b> Temporary Access: Smart locks allow homeowners to provide temporary access codes, reducing the need for physical keys and minimizing the risk of key loss.<br>
+
 </p>
 	</details>
 	<details>
 		<summary>Disadvantages of Smart Locks</summary>
-		<b>1. Consume power:</b> Like your desktop computer or mobile phone, these gadgets won’t function without power which is most likely to deter homeowners from opting for motorized keyless-entrys.
+		<b>1. Power Dependency:</b> Smart locks often rely on batteries, and if they run out or lose power, users may be locked out unless they have a backup key or power source.
 Although, there are available motorized keyless-entrys that have backup batteries or solar energy converters in case a power outage occurs. But still becomes an inconvenience for areas that have frequent power outages, and with technology, we know that the possibility of glitches can still occur. <br>
-<b>2. Costs:</b> The upfront cost of smart keyless-entrys can be expensive, especially for the higher-end designs with smart-tech and voice integrations.
-For example, solar-powered and hybrid models (combination of plug-in and solar) will cost even more, especially when they can have preset settings and is controllable through smartphones.<br>
-Another added cost is when you want to conceal 240 volt wiring for motorized keyless-entrys (or mount a plug-in power source) as you need a professional electrician to perform the installation. While this option costs more upfront, you’ll still save a lot by going for a battery powered alternative to 240 volt power supply. This will help cut your energy bills, not to mention the convenience and time-saving advantages it provides. The only problem with batteries is they run out and the thought of charging a window keyless-entry doesn’t appeal to many people.<br>
-<b>3. Technological Difficulties:</b> people who are not comfortable with smart devices may find the operation arduous. Moreover, technical difficulties may arise just like any tech device where malfunction and glitches may occur, especially for low-quality models.
-Damaged or malfunctioning motorized keyless-entrys will need professional repairs, although most motorized keyless-entry suppliers provide warranties. You’ll also find plug-and-play options for motorized keyless-entrys that don’t need any complex configurations to operate. 
+<b>2. Compatibility Issues:</b> Integrating smart locks with different devices and platforms can lead to compatibility challenges, necessitating careful consideration of your specific ecosystem.<br>
+<b>3. Cost:</b> Smart locks can be more expensive than traditional locks, and ongoing costs may be associated with maintenance and upgrades, potentially impacting your budget.<br>
+<b>4. Vulnerable to hacking:</b/> If not adequately secured, smart locks can be vulnerable to hacking attempts, emphasizing the importance of strong passwords and regular software updates. 
 
 </p>
 	</details>
