--- a/privacy.html
+++ b/privacy.html
@@ -182,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div></li>
 
 
-<li class="nav-item"><a class="nav-link link text-white display-4" href="news.html" aria-expanded="false">News</a></li>
+<li class="nav-item"><a class="nav-link link text-white display-4" href="shop.html" aria-expanded="false">Shop</a></li>
 <li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html" aria-expanded="false">Contact</a></li>
 
 </ul>
