schema for lighting

--- a/lighting.html
+++ b/lighting.html
@@ -66,6 +66,76 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   
 </head>
+
+
+<script type="application/ld+json">
+   [{
+      "@context": "https://schema.org",
+      "@type": "QAPage",
+      "mainEntity": {
+        "@type": "Question",
+        "name": "irrigation",
+        "text": "Does HomeKit support WiFi switches? I want to retrofit lighting into my existing home. What is the best Homekit lighting solution for me?",
+        "answerCount": 3,
+        "upvoteCount": 26,
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Numerous in-wall Wifi switches are available for retrofits/renovations.  HouseMate recommends Shelly or Meross for in-wall wifi switches",
+          "upvoteCount": 13,
+          "url": "https://house-mate.com.au/question1#acceptedAnswer"
+          },
+        "suggestedAnswer": [
+          {
+            "@type": "Answer",
+            "text": "Depends. You can either keep your wall sockets and place a WiFi switch behind them, or change the wall plate to one that has WiFi built in.",
+            "upvoteCount": 12,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer1"
+          }
+        ]
+      }
+    },
+   	{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ What are the advantages of smart lighting?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Convenience and ease of remote use, smart scheduling, voice integration, smart sensors that will trigger lighting when movement is detected, or alternatively switch off lights after a period where no movement is detected.  These are just a few advantages of smart lighting."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ How do I issue a voice command for my sprinklers?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, switch off the main room lights is the command for Apple, whereas Alexa, switch on the entrance lights is the command for Amazons voice assistant."
+   			}
+   		},
+
+
+{
+   			"@type": "Question",
+   			"name": "✅ Can I dim lights with Homekit?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Light circuits or bulbs can be dimmed from Homekit provided they have dimmable transformers or the bulbs themselves are dimmable.  Homekit cannot dim a light that is not designed to dim."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Is smart lighting worth it?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Smart lighting gives you access to your lighting wherever and whenever you need from your phone. It also allows the creation of scenes and automations involving lighting when combined with other accessories. For example, when the doorbell senses movement at night automatically turn on the entrance lights for a three minutes."
+   			}
+
+   		}]
+   	}
+   ]
+</script>
 <body>
 
 <!-- Google Tag Manager (noscript) -->
