--- a/garage-ecom.html
+++ b/garage-ecom.html
@@ -67,6 +67,75 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   
 </head>
+
+<script type="application/ld+json">
+   [{
+      "@context": "https://schema.org",
+      "@type": "QAPage",
+      "mainEntity": {
+        "@type": "Question",
+        "name": "Garage Door",
+        "text": "What is the best Homekit garage door? I have an old garage door motor and want to include it in Homekit.",
+        "answerCount": 3,
+        "upvoteCount": 26,
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Numerous garage door controllers are compatible with Apple HomeKit. HouseMate recommends Meross Smart Garage Door Controller. Most garage doors are compatible as long as they have 'normally open' and 'normally closed' ports where the Meross can be plugged into.",
+          "upvoteCount": 13,
+          "url": "https://house-mate.com.au/question1#acceptedAnswer"
+          },
+        "suggestedAnswer": [
+          {
+            "@type": "Answer",
+            "text": "Meross is widely used and can be easily retro fitted to existing garage doors.",
+            "upvoteCount": 12,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer1"
+          }
+        ]
+      }
+    },
+   	{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ What are the advantages of a smart garage door?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Improve your home's security, Never forget to close your garage door, Control your garage door from anywhere, Protect your packages and other deliveries, Set a schedule for your garage door, Keep track of who's coming and going, Your smartphone serves as your garage door remote."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ How do I issue a voice command for my garage door?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, open the garage door is the command for Apple."
+   			}
+   		},
+
+
+{
+   			"@type": "Question",
+   			"name": "✅ Can I see the status of the garage door with Homekit?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "The garage door status is always up to date within Homekit. Notifications can be set to alert when the door is either opened or closed."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Is a smart garage door opener secure?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "A smart garage door can be secure through features like strong encryption, two-factor authentication, regular software updates, and secure Wi-Fi networks."
+   			}
+
+   		}]
+   	}
+   ]
+</script>
 <body>
 
 <!-- Google Tag Manager (noscript) -->
