blinds updated with schema qns

--- a/blinds-ecom.html
+++ b/blinds-ecom.html
@@ -65,6 +65,77 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   
 </head>
+
+<script type="application/ld+json">
+   [{
+      "@context": "https://schema.org",
+      "@type": "QAPage",
+      "mainEntity": {
+        "@type": "Question",
+        "name": "SmartBlinds",
+        "text": "Are smart blinds compatible with my existing smart home ecosystem (e.g., Apple HomeKit, Google Assistant, Amazon Alexa)?",
+        "answerCount": 3,
+        "upvoteCount": 26,
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Many smart blinds are compatible with popular smart home ecosystems like Apple HomeKit, Google Assistant, and Amazon Alexa, allowing seamless integration and voice control within your existing setup. However, compatibility may vary by brand and model, so it's essential to check product specifications and ensure compatibility with your specific ecosystem. The 'Matter' protocol aims to improve compatibility and manufacturers are adding this to their products.",
+          "upvoteCount": 13,
+          "url": "https://house-mate.com.au/question1#acceptedAnswer"
+          },
+        "suggestedAnswer": [
+          {
+            "@type": "Answer",
+            "text": "Acmeda is natively HomeKit compatible, however products such as BondBridge can bring non-compatible devices into the ecosystem.",
+            "upvoteCount": 12,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer1"
+          }
+        ]
+      }
+    },
+   	{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ Do smart blinds offer voice control options?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Yes, many smart blinds offer voice control options through virtual assistants like Amazon Alexa, Google Assistant, or Apple's Siri, making it convenient to adjust them using voice commands. Hey Siri, set the main room blinds to 50%."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ What types of power sources do smart blinds use (e.g., battery-powered, plug-in, solar)?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Smart blinds can be powered in various ways, including battery-powered, plug-in (electricity), and some models even offer solar power options for eco-friendly and energy-efficient operation. The power source depends on the specific brand and model of smart blinds. HouseMate recommend 240v electrical power where possible."
+   			}
+   		},
+
+
+{
+   			"@type": "Question",
+   			"name": "✅ How are smart blinds installed, and can I do it myself?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Smart blinds are typically installed by mounting the brackets, attaching the blind, and setting up the control system. Many people can install them themselves, but it's essential to follow the manufacturer's instructions and consider your DIY skills and tools. Some installations may require professional assistance, depending on complexity and window type."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ Can smart blinds be programmed to open and close on a schedule?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Yes, smart blinds can be programmed to open and close on a schedule, allowing you to automate their operation to suit your daily routines, enhance energy efficiency, and provide privacy and light control as needed. HouseMate checks the weather and can close the blinds depending upon outside temperature."
+   			}
+
+   		}]
+   	}
+   ]
+</script>
+
+
 <body>
 
 <!-- Google Tag Manager (noscript) -->
