--- a/cbus.html
+++ b/cbus.html
@@ -65,6 +65,65 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
  
 </head>
+
+<script type="application/ld+json">
+   [{
+      "@context": "https://schema.org",
+      "@type": "QAPage",
+      "mainEntity": {
+        "@type": "Question",
+        "name": "CBUS",
+        "text": "Can CBUS be intergated into HomeKit?",
+        "answerCount": 3,
+        "upvoteCount": 26,
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "C-Bus by Schneider Electric is not directly compatible with Apple HomeKit. However, third-party solutions or bridge devices can integrate C-Bus with HomeKit. Compatibility and options can change over time, so call us at HouseMate to get the latest information and available solutions to see if there have been any developments in C-Bus and HomeKit integration.",
+          "upvoteCount": 13,
+          "url": "https://house-mate.com.au/question1#acceptedAnswer"
+          },
+        "suggestedAnswer": [
+          {
+            "@type": "Answer",
+            "text": "CBUS is not natively compatible with Apple HomeKit, however uncertified options exist that can integrate CBUS connected accessories such as lighting and blinds.",
+            "upvoteCount": 12,
+            "url": "https://house-mate.com.au/question1#suggestedAnswer1"
+          }
+        ]
+      }
+    },
+   	{
+   		"@context": "https://schema.org",
+   		"@type": "FAQPage",
+   		"mainEntity": [{
+   			"@type": "Question",
+   			"name": "✅ Do dimmable lights from CBUS present as a dimmable light within HomeKit?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Yes, provided the circuit is dimmable within CBUS it will present as a dimmable accessory in Homekit.  Hey Siri, set the main room lights to 50%."
+   			}
+   		},
+
+{
+   			"@type": "Question",
+   			"name": "✅ How long does it take to program CBUS into Homekit?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Programming time varies depending upon the number of electrical circuits and blinds connected into HomeKit.  Another dependency is the version of CBUS as earlier version require a seperate network interface of which one side connects to CBUS and the other side connects to a wired network (LAN)."
+   			}
+   		},
+ {
+   			"@type": "Question",
+   			"name": "✅ What does it cost to integrate CBUS into Homekit?",
+   			"acceptedAnswer": {
+   				"@type": "Answer",
+   				"text": "Prices vary depending upon the size of the CBUS installation and programming required. Indicatively, prices range from $1500 to $6000."
+   			}
+
+   		}]
+   	}
+   ]
+</script>
 <body>
 
 <!-- Google Tag Manager (noscript) -->
