--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    		"mainEntity": {
    			"@type": "Question",
    			"name": "housemate",
-   			"text": "I am really interested to integrate devices in my home and make them inter operable? What is the best way to approach this?",
+   			"text": "How do I integrate older products from different manufacturers? What is the best approach?",
    			"answerCount": 3,
    			"upvoteCount": 9,
    			"acceptedAnswer": {
@@ -207,7 +207,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     	"@type": "Webpage",
     	"@id": "https://house-mate.com.au/#webpage",
     	"url": "https://house-mate.com.au/",
-    	"name": "House-Mate | Whole of home control via a single voice enabled app",
+    	"name": "House-Mate | HomeKit to control the entire home",
     	"description": "Control lighting, alarm system & security cameras, blinds, irrigation, thermostats, garage door & gates, pool & spa, AV equipment and more... from anywhere for optimal convenience, security, and peace of mind.",
     	"isPartOf": {
     		"@type": "WebSite",
@@ -280,7 +280,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 4,
         "name": "Irrigation",
         "item": "https://house-mate.com.au/irrigation.html"
-      }]
+      },
+{
+        "@type": "ListItem",
+        "position": 5,
+        "name": "Blinds",
+        "item": "https://house-mate.com.au/blinds.html"
+      },
+{
+        "@type": "ListItem",
+        "position": 6,
+        "name": "Thermostat",
+        "item": "https://house-mate.com.au/thermostat.html"
+      },
+]
     }
 
    ]
