remove faq and q&a from home page

--- a/index.html
+++ b/index.html
@@ -76,75 +76,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <script type="application/ld+json">
 
-   [{
-   		"@context": "https://schema.org",
-   		"@type": "QAPage",
-   		"mainEntity": {
-   			"@type": "Question",
-   			"name": "housemate",
-   			"text": "How do I integrate older products from different manufacturers? What is the best approach?",
-   			"answerCount": 3,
-   			"upvoteCount": 9,
-   			"acceptedAnswer": {
-   				"@type": "Answer",
-   				"text": "Interoperability requires a central hub or device that acts as the master controller. Multiple options available from Samsung Smarthings, Apple HomeKit, Google Home.",
-   				"upvoteCount": 5,
-   				"url": "https://house-mate.com.au/question1#acceptedAnswer"
-   			},
-   			"suggestedAnswer": [{
-   				"@type": "Answer",
-   				"text": "There are many hubs on the market and dont forget to check out the open source hubs if you like DIY.",
-   				"upvoteCount": 4,
-   				"url": "https://house-mate.com.au/question1#suggestedAnswer1"
-   			}, {
-   				"@type": "Answer",
-   				"text": "Installers will assist your hub and smart device selection process by understanding the devices you already have and putting together a custom solution.",
-   				"upvoteCount": 0,
-   				"url": "https://house-mate.com.au/question1#suggestedAnswer2"
-   			}]
-   		}
-   	},
-   	{
-   		"@context": "https://schema.org",
-   		"@type": "FAQPage",
-   		"mainEntity": [{
-   				"@type": "Question",
-   				"name": "✅ Can I capture buttons from a remote control and have them within HomeKit?",
-   				"acceptedAnswer": {
-   					"@type": "Answer",
-   					"text": "Yes. Any function on the remote control (or sequence of button presses) can be harnessed and most big brands (post 2015 models) are supported, namely Sony, LG, Samsung TVs. This extends to most infra red remote controls."
-   				}
-   			},
-
-   			{
-   				"@type": "Question",
-   				"name": "✅ How do I issue a voice command for lights?",
-   				"acceptedAnswer": {
-   					"@type": "Answer",
-   					"text": "Depending on the voice assistant in use the commands vary.  Hey Siri, switch off the bedroom lights is the command for Apple, whereas Alexa, turn off the bedroom lights is the command for Amazons voice assistant."
-   				}
-   			},
-
-
-   			{
-   				"@type": "Question",
-   				"name": "✅ Which is the best voice assistant for home automation?",
-   				"acceptedAnswer": {
-   					"@type": "Answer",
-   					"text": "The three most popular voice assistants are Apple Siri, Amazon Alexa, and Google Home. All integrate with home automation and can be used to control lighting, thermostats, irrigation, televisions, security, etc"
-   				}
-   			},
-   			{
-   				"@type": "Question",
-   				"name": "✅ Do voice assistants learn your voice and improve their recognition?",
-   				"acceptedAnswer": {
-   					"@type": "Answer",
-   					"text": "Yes, voice assistants have the ability to learn your voice over time thus improving their accuracy."
-   				}
-
-   			}
-   		]
-   	},
+   [
    
     {
       "@context": "https://schema.org",
@@ -167,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         },
         "author": {
           "@type": "Person",
-          "name": "Jamie Kuperholz"
+          "name": "Andrew Gostin"
         }
       },
       "geo": {
