--- a/index - broken schema.html
+++ b/index - broken schema.html
@@ -77,7 +77,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="application/ld+json">
 
    [
-   	
    
     {
       "@context": "https://schema.org",
@@ -100,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         },
         "author": {
           "@type": "Person",
-          "name": "Jamie Kuperholz"
+          "name": "Andrew Gostin"
         }
       },
       "geo": {
