fixed schema markup in index page. 5 elements now good

--- a/index.html
+++ b/index.html
@@ -75,65 +75,37 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
 </head>
 <script type="application/ld+json">
-
-   [
-   	
-   
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "House-Mate Automation",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "1/257 Auburn Road",
-        "addressLocality": "Hawthorn East",
-        "addressRegion": "Victoria",
-        "postalCode": "3122",
-        "addressCountry": "AU"
-      },
-       "review": {
-        "@type": "Review",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "4",
-          "bestRating": "5"
-        },
-        "author": {
-          "@type": "Person",
-          "name": "Jamie Kuperholz"
-        }
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": -37.82889,
-        "longitude": 145.04399
-      },
-	"sameAs" : [
-                    "https://facebook.com/HousemateAutomation",
-                    "https://twitter.com/HousemateAU",
-                    "https://instagram.com/Housemateautomation"
-	],
-      "url": "https://house-mate.com.au/",
-"slogan": "For whole of home automation, House-Mate",
-	"logo": "https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png",
-      "telephone": "+61390003555",
-	"email": "info@house-mate.com.au",
-	"keywords": "home automation, smart home, smart home melbourne, greenstar, CBUS, Legrand, Apple HomeKit, smart power points, smart blinds, smart pool and spa, smart alarm system, one app to control your home, best smart home", 
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
+{
+  "@context": "http://schema.org",
+  "@type": "LocalBusiness",
+  "name": "House-Mate Automation",
+  "image": "https://house-mate.com.au/assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png",
+  "telephone": "+61390003555",
+  "email": "info@house-mate.com.au",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Level 1/257 Auburn Road",
+    "addressLocality": "Hawthorn East",
+    "addressRegion": "Victoria",
+    "addressCountry": "Australia",
+    "postalCode": "3182"
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
             "Monday",
             "Tuesday",
 		"Wednesday",
-            "Thursday",
-            "Friday"
+		"Thursday",
+		"Friday"
           ],
           "opens": "09:00",
           "closes": "17:00"
-        }
-      ]
-    },
+  },
+  "url": "https://house-mate.com.au/index.html"
+}
+</script>
+<script type="application/ld+json">
  
     {
     	"@context": "https://schema.org",
@@ -159,7 +131,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     			"query-input": "required name=search_term_string"
     		}
     	}
-    },
+    }
+</script>
+<script type="application/ld+json">
 
  {
       "@context": "https://schema.org",
@@ -178,15 +152,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "postalCode": "3122",
         "addressCountry": "AU"
 }
-},
+}
+</script>
+<script type="application/ld+json">
 {
       "@context": "https://schema.org",
       "@type": "SiteNavigationElement",
 	"name": "Homepage",
 	"url": "https://house-mate.com.au/"
-},
-
-
+}
+</script>
+<script type="application/ld+json">
 {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -225,7 +201,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 6,
         "name": "Thermostat",
         "item": "https://house-mate.com.au/thermostat.html"
-      },
+      }
 ]
     }
 
