separated json scripts properly

--- a/garage.html
+++ b/garage.html
@@ -80,7 +80,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     	"isPartOf": {
     		"@type": "WebSite",
     		"@id": "https://house-mate.com.au/#website",
-    		"description": "Control lighting from anywhere for optimal convenience, security, and peace of mind. Contact House-Mate for the best home automation solutions.",
+    		"description": "Control your home from anywhere for optimal convenience, security, and peace of mind. Contact House-Mate for the best home automation solutions.",
     		"url": "https://house-mate.com.au/",
     		"name": "House-Mate Automation",
     		"inLanguage": "en-US",
@@ -94,7 +94,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     			"query-input": "required name=search_term_string"
     		}
     	}
-    },
+    }]
+</script>
+<script type="application/ld+json">
+[
 {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -133,8 +136,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 6,
         "name": "Thermostat",
         "item": "https://house-mate.com.au/thermostat.html"
-      },
-{
+      }]
+}]
+</script>
+<script type="application/ld+json">
+[{
       "@context": "https://schema.org",
       "@type": "VideoObject",
       "name": "Garage Automation | Smart Garage and Gates",
@@ -155,6 +161,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "regionsAllowed": "AU,US,NL"
     }
    ]
+}
+]
 </script>
 
 
