--- a/security.html
+++ b/security.html
@@ -95,7 +95,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     			"query-input": "required name=search_term_string"
     		}
     	}
-    },
+    }]
+</script>
+<script type="application/ld+json">
+[
 {
       "@context": "https://schema.org",
       "@type": "BreadcrumbList",
@@ -134,7 +137,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "position": 6,
         "name": "Thermostat",
         "item": "https://house-mate.com.au/thermostat.html"
-      },
+      }
+]
+}
+]
+</script>
+
+
+<script type="application/ld+json">
 {
       "@context": "https://schema.org",
       "@type": "VideoObject",
@@ -156,6 +166,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "regionsAllowed": "AU,US,NL"
     }
    ]
+}
+]
 </script>
 
 
